--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,76 @@
   margin-left: 1100px; 
   
 }
+.Header {
+  width: 100%;
+  height: 20vh;
+}
+.dates-container {
+  background: linear-gradient(#1c1c1c 0% 50%, #ffffff 50% 100%);
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.timing {
+  height: 63px;
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 9px;
+  box-shadow: 0px 1px 4px #d6d6d69e;
+  font-weight: bold;
+}
+.options-container {
+  height: 20%;
+  display: flex;
+  align-items: center;
+}
+.options-lists {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  gap: 0 10px;
+}
+.choice-list {
+  height: 24px;
+  width: 76px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 3px 6px #fff9f2;
+  border: 0.5px solid #8a8a8a;
+  border-radius: 17px;
+}
+.Popular {
+  padding-top: 20px;
+}
+.Popular-heading {
+  padding-bottom: 10px;
+  font: normal normal bold 14px/19px Open Sans;
+}
+.Popular-items {
+  list-style: none;
+  display: flex;
+  gap: 0 10px;
+}
+.Popular-item {
+  height: 57px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 1px solid #ff941a;
+  padding: 1px;
+}
+.img {
+  background-color: blue;
+  border-radius: 50%;
+  height: 100%;
+  aspect-ratio: 1;
+}
+
+
+
